Correction du collapse + mise en place de la page logement et du composant carrousel

--- a/src/_scss/components/collapse.scss
+++ b/src/_scss/components/collapse.scss
@@ -1,6 +1,7 @@
 @import "../utils/variables";
 .collapse{
     margin: 20px 0;
+   
     &__head {
         display: flex;
         align-items: center;
@@ -9,60 +10,32 @@
         color: #fff;
         border-radius: 5px;
         padding: 3px 10px;
-   
         &__arrow {
             cursor: pointer;
             transition: transform 300ms;
         }
     }
     &__description {
-        background-color: transparent;
+        background-color: #F6F6F6;
         color: $color-primary;
         padding: 18px 10px 10px;
         font-size: 17px;
-        opacity: 0;
-        transform: translateY(-30px);
-        transition: all 300ms ease-in-out;
-        
+        animation: 300ms ease-in-out fade;
     }
 }
 
-.fade-enter {
-    opacity: 0;
-    background-color: transparent;
-}
-.fade-enter-active {
-    opacity: .5;
-    background-color: transparent;
-    transform: translateY(0);
-    
-}
 
-.fade-enter-done {
-    opacity: 1;
-    background-color: #F6F6F6;
-    transform: translateY(0);
-
-}
-
-.fade-exit {
-    opacity: 1;
-    transform: translateY(-5px);
-    background-color: transparent;
-
-}
-
-.fade-exit-active {
-    opacity: .5;
-    transform: translateY(-30px);
-    background-color: transparent;
-
-}
-
-.fade-exit-done { 
-    opacity: 0;
-
-}
+@keyframes fade {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+      background-color: transparent;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 
 .rotate {
     transform: rotate(-180deg);
